welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: not found: value suite
suite(1)=1
^golomb:15: error: not found: value suite
suite(i)=a
^golomb:18: error: not found: value suite
return suite(i)
       ^