welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var freq = new Array[Int](num)
var suit = new Array[Int](num)
var a = 0
var i = 1
var k =0
suite(1)=1
freq(1)=1





while (k != freq(i) && i !=num) {
suite(i)=a
k += 1}

return suite(i)



}
